--- a/README.org
+++ b/README.org
@@ -18,6 +18,12 @@ ox-epub. It required refactoring some of the package's internal workings. Bug
 reports and PRs are welcome, though this is not my day job so I probably won't
 be quick to respond.
 
+** Unimplemented features/known issues :
+- [ ] configurable headline level for chapter divisions and for TOC items
+- [ ] html TOCs are being generated in each exported chapter; get rid of them
+- [ ] should probably migrate to a more modern version of epub
+- [ ] Lots of features are untested on this branch. There are almost certainly regressions.
+
 ** Prerequisites
 
 This depends on Emacs 24.4 and OrgMode 9, it won't work on OrgMode 8 or
